--- a/.github/workflows/bun-mac-x64-baseline.yml
+++ b/.github/workflows/bun-mac-x64-baseline.yml
@@ -156,11 +156,13 @@ jobs:
         if: matrix.dependencies
         with:
           key: ${{ runner.os }}-ccache-${{ matrix.tag }}-dependencies
+          restore-keys: ${{ runner.os }}-ccache-${{ matrix.tag }}-dependencies
       - name: ccache (c++)
         uses: hendrikmuhs/ccache-action@v1.2
         if: matrix.compile_obj
         with:
           key: ${{ runner.os }}-ccache-${{ matrix.tag }}-obj
+          restore-keys: ${{ runner.os }}-ccache-${{ matrix.tag }}-obj
       - name: Download WebKit
         if: matrix.compile_obj
         env:
@@ -270,6 +272,7 @@ jobs:
         uses: hendrikmuhs/ccache-action@v1.2
         with:
           key: ${{ runner.os }}-ccache-${{ matrix.tag }}-link
+          restore-keys: ${{ runner.os }}-ccache-${{ matrix.tag }}-link
       - name: Download WebKit
         env:
           CPU_TARGET: ${{ matrix.cpu }}
