--- a/packages/bun-types/package.json
+++ b/packages/bun-types/package.json
@@ -12,7 +12,8 @@
   },
   "devDependencies": {
     "tsd": "^0.22.0",
-    "typedoc": "^0.23.9"
+    "typedoc": "^0.23.9",
+    "prettier": "^2.4.1"
   },
   "tsd": {
     "directory": "tests"
