--- a/.github/workflows/bun-landing.yml
+++ b/.github/workflows/bun-landing.yml
@@ -26,7 +26,7 @@ jobs:
           node-version: ${{ matrix.node }}
 
       - name: Install bun
-        uses: xhyrom/setup-bun@v0.1.2
+        uses: xhyrom/setup-bun
         with:
           bun-version: latest
 
