--- a/.github/workflows/bun-types-release.yml
+++ b/.github/workflows/bun-types-release.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install bun
-        uses: xhyrom/setup-bun@v0.1.6
+        uses: xhyrom/setup-bun
         with:
           bun-version: latest
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -88,7 +88,7 @@ jobs:
           scope: '@oven-sh'
 
       - name: Install bun
-        uses: xhyrom/setup-bun@v0.1.6
+        uses: xhyrom/setup-bun
         with:
           bun-version: latest
           github-token: ${{ secrets.GITHUB_TOKEN }}
