--- a/.github/workflows/bun-types-tests.yml
+++ b/.github/workflows/bun-types-tests.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install bun
-        uses: xhyrom/setup-bun@v0.1.6
+        uses: xhyrom/setup-bun
         with:
           bun-version: latest
           github-token: ${{ secrets.GITHUB_TOKEN }}
