--- a/.github/workflows/bun-types-tests.yml
+++ b/.github/workflows/bun-types-tests.yml
@@ -20,9 +20,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install bun
-        uses: xhyrom/setup-bun@latest
+        uses: xhyrom/setup-bun@v0.1.8
         with:
-          bun-version: latest
+          bun-version: canary
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install node
