--- a/.github/ISSUE_TEMPLATE/2-bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/2-bug-report.yml
@@ -1,6 +1,6 @@
 name: 🐛 Bug Report
 description: Report an issue that should be fixed
-labels: [bug, need repro]
+labels: [bug]
 body:
   - type: markdown
     attributes:
