Improve bug report issue template

--- a/.github/ISSUE_TEMPLATE/2-bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/2-bug-report.yml
@@ -19,15 +19,14 @@ body:
     attributes:
       label: What platform is your computer?
       description: |
-        For MacOS and Linux: copy the output of `uname -mprsv`
+        For MacOS and Linux: copy the output of `uname -mprs`
         For Windows: copy the output of `"$([Environment]::OSVersion | ForEach-Object VersionString) $(if ([Environment]::Is64BitOperatingSystem) { "x64" } else { "x86" })"` in the PowerShell console
   - type: textarea
     attributes:
       label: What steps can reproduce the bug?
-      description: Enter the details about your bug. If possible, please provide a small code snippet that can reproduce the issue.
-  - type: textarea
-    attributes:
-      label: How often does it reproduce? Is there a required condition?
+      description: Explain the bug and provide a code snippet that can reproduce it.
+    validations:
+      required: true
   - type: textarea
     attributes:
       label: What is the expected behavior?
@@ -36,8 +35,6 @@ body:
     attributes:
       label: What do you see instead?
       description: If possible, please provide text instead of a screenshot.
-    validations:
-      required: true
   - type: textarea
     attributes:
       label: Additional information
