--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "mitata": "^0.1.3",
-    "peechy": "0.4.32",
+    "peechy": "latest",
     "react": "next",
     "react-dom": "next"
   },
