--- a/.github/workflows/bun-linux-build.yml
+++ b/.github/workflows/bun-linux-build.yml
@@ -41,6 +41,7 @@ jobs:
             runner: linux-amd64
             webkit_url: "https://github.com/oven-sh/WebKit/releases/download/dec17/bun-webkit-linux-amd64-lto.tar.gz"
             webkit_basename: "bun-webkit-linux-amd64-lto"
+            build_machine_arch: x86_64
           - cpu: westmere
             tag: linux-x64-baseline
             arch: x86_64
@@ -48,6 +49,7 @@ jobs:
             runner: linux-amd64
             webkit_url: "https://github.com/oven-sh/WebKit/releases/download/dec17/bun-webkit-linux-amd64-lto.tar.gz"
             webkit_basename: "bun-webkit-linux-amd64-lto"
+            build_machine_arch: x86_64
           - cpu: native
             tag: linux-aarch64
             arch: aarch64
@@ -55,6 +57,7 @@ jobs:
             runner: linux-arm64
             webkit_url: "https://github.com/oven-sh/WebKit/releases/download/dec17/bun-webkit-linux-arm64-lto.tar.gz"
             webkit_basename: "bun-webkit-linux-arm64-lto"
+            build_machine_arch: aarch64
 
     steps:
       - uses: actions/checkout@v3
@@ -85,6 +88,7 @@ jobs:
           build-args: |
             ARCH=${{matrix.arch}}
             BUILDARCH=${{matrix.build_arch}}
+            BUILD_MACHINE_ARCH=${{matrix.build_machine_arch}}
             CPU_TARGET=${{matrix.cpu}}
             WEBKIT_URL=${{matrix.webkit_url}}
             GIT_SHA=${{github.sha}}
