--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,9 @@
   "search.followSymlinks": false,
   "search.useIgnoreFiles": true,
   "zig.buildOnSave": false,
+  "zig.buildArgs": ["obj", "-Dfor-editor"],
+  "zig.buildOption": "build",
+  "zig.buildFilePath": "${workspaceFolder}/build.zig",
   "[zig]": {
     "editor.tabSize": 4,
     "editor.useTabStops": false,
