--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,8 @@
     "src/deps/uws": true,
     "src/deps/zlib": true,
     "src/deps/lol-html": true,
+    "src/deps/c-ares": true,
+    "src/deps/tinycc": true,
     "test/snippets/package-json-exports/_node_modules_copy": true
   },
   "C_Cpp.files.exclude": {
