--- a/.github/workflows/bun-types-tests.yml
+++ b/.github/workflows/bun-types-tests.yml
@@ -3,6 +3,7 @@ on:
   push:
     paths:
       - packages/bun-types/**/*
+    branches: [main]
   pull_request:
     paths:
       - packages/bun-types/**/*
@@ -22,7 +23,7 @@ jobs:
       - name: Install bun
         uses: xhyrom/setup-bun@v0.1.8
         with:
-          bun-version: canary
+          bun-version: latest
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install node
