--- a/.github/workflows/bun-types-release-canary.yml
+++ b/.github/workflows/bun-types-release-canary.yml
@@ -37,16 +37,11 @@ jobs:
       - name: Tests
         run: bun run test
 
-      - name: Get package.json version
-        working-directory: packages/bun-types/dist
-        id: pkg
-        uses: martinbeentjes/npm-get-version-action@main
-
       - name: Set temp version
         working-directory: packages/bun-types/dist
         run: |
           git_hash=$(git rev-parse --short "$GITHUB_SHA")
-          new_pkg_version="${{ steps.pkg.outputs.current-version}}-canary.${git_hash}"
+          new_pkg_version="${{ bun --version }}-canary.${git_hash}"
           echo "new_pkg_version"
           echo "${new_pkg_version}"
           npm version ${new_pkg_version} --no-git-tag-version
