--- a/.github/workflows/bun-types-tests.yml
+++ b/.github/workflows/bun-types-tests.yml
@@ -1,4 +1,4 @@
-name: TypeScript Types
+name: Test bun-types
 on:
   push:
     paths:
@@ -10,7 +10,7 @@ on:
 
 jobs:
   tests:
-    name: Build and Test
+    name: Build and test
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -18,7 +18,7 @@ jobs:
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Install bun
         uses: xhyrom/setup-bun@v0.1.8
