--- a/.github/workflows/bun-types-release-canary.yml
+++ b/.github/workflows/bun-types-release-canary.yml
@@ -48,7 +48,7 @@ jobs:
         with:
           package: packages/bun-types/dist/package.json
           token: ${{ secrets.NPM_BUN_TYPES_TOKEN }}
-          dry-run: true
+          # dry-run: true
           tag: canary
       # - name: Publish on NPM
       #   working-directory: packages/bun-types/dist
