Test noncanary publish

--- a/.github/workflows/bun-types-release-canary.yml
+++ b/.github/workflows/bun-types-release-canary.yml
@@ -1,7 +1,7 @@
 name: Release bun-types@canary
 on:
   push:
-    branches: [main, canary-types]
+    branches: [main]
 jobs:
   tests:
     name: Build, test, publish canary
