--- a/.github/workflows/bun-types-release.yml
+++ b/.github/workflows/bun-types-release.yml
@@ -62,7 +62,7 @@ jobs:
 
       - name: Publish to NPM
         working-directory: packages/bun-types/dist
-        run: npm publish --dry-run
+        run: npm publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
@@ -101,7 +101,7 @@ jobs:
         run: bun scripts/gpr.ts
 
       - name: Publish on GPR
-        run: cd dist/ && npm publish --dry-run --access public
+        run: cd dist/ && npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
