--- a/.github/workflows/bun-types-release.yml
+++ b/.github/workflows/bun-types-release.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Release bun-types
 on:
   workflow_dispatch:
 
@@ -14,9 +14,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install bun
-        uses: xhyrom/setup-bun@v0.1.8
+        uses: oven-sh/setup-bun@v0.1.8
         with:
-          bun-version: canary
+          bun-version: latest
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install node
@@ -26,9 +26,6 @@ jobs:
 
       - name: Install dependencies
         run: bun install
-
-      - name: ESLint
-        run: bun run lint
 
       - name: Build package
         run: bun run build
@@ -41,7 +38,7 @@ jobs:
           if-no-files-found: error
 
   publish-npm:
-    name: Publish on NPM
+    name: Publish to NPM
     runs-on: ubuntu-latest
     needs: [test-build]
     if: github.repository_owner == 'oven-sh'
@@ -51,7 +48,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Install node
+      - name: Install Node
         uses: actions/setup-node@v3
         with:
           node-version: latest
@@ -63,8 +60,9 @@ jobs:
           name: bun-types
           path: packages/bun-types/dist
 
-      - name: Publish on NPM
-        run: cd packages/bun-types/dist/ && npm publish --access public
+      - name: Publish to NPM
+        working-directory: packages/bun-types/dist
+        run: npm publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
@@ -88,16 +86,16 @@ jobs:
           scope: '@oven-sh'
 
       - name: Install bun
-        uses: xhyrom/setup-bun@v0.1.8
+        uses: oven-sh/setup-bun@v0.1.8
         with:
-          bun-version: canary
+          bun-version: latest
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Download all artifacts
         uses: actions/download-artifact@v3
         with:
           name: bun-types
-          path: dist
+          path: packages/bun-types/dist
 
       - name: Add scope to name
         run: bun scripts/gpr.ts
