--- a/.github/workflows/bun-types-release.yml
+++ b/.github/workflows/bun-types-release.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install bun
         uses: oven-sh/setup-bun@v0.1.8
         with:
-          bun-version: latest
+          bun-version: canary
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install node
@@ -88,7 +88,7 @@ jobs:
       - name: Install bun
         uses: oven-sh/setup-bun@v0.1.8
         with:
-          bun-version: latest
+          bun-version: canary
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Download all artifacts
