Only publish canary when types change

--- a/.github/workflows/bun-types-release-canary.yml
+++ b/.github/workflows/bun-types-release-canary.yml
@@ -2,6 +2,8 @@ name: Release bun-types@canary
 on:
   push:
     branches: [main]
+    paths:
+      - 'packages/bun-types/**'
 jobs:
   tests:
     name: Build, test, publish canary
