--- a/.github/workflows/bun-types-release-canary.yml
+++ b/.github/workflows/bun-types-release-canary.yml
@@ -2,6 +2,8 @@ name: Release bun-types@canary
 on:
   push:
     branches: [main]
+    paths:
+      - 'packages/bun-types/**'
 jobs:
   tests:
     name: Build, test, publish canary
@@ -22,7 +24,7 @@ jobs:
       - name: Install Bun
         uses: oven-sh/setup-bun@v0.1.8
         with:
-          bun-version: latest
+          bun-version: canary
           github-token: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Install dependencies
