Simplify types release

--- a/.github/workflows/bun-types-release.yml
+++ b/.github/workflows/bun-types-release.yml
@@ -61,75 +61,8 @@ jobs:
           path: packages/bun-types/dist
 
       - name: Publish to NPM
-        working-directory: packages/bun-types/dist
-        run: npm publish
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-  publish-gpr:
-    name: Publish on GPR
-    runs-on: ubuntu-latest
-    needs: [test-build]
-    if: github.repository_owner == 'oven-sh'
-    defaults:
-      run:
-        working-directory: packages/bun-types
-
-    steps:
-      - uses: actions/checkout@v3
-      - name: Install node
-        uses: actions/setup-node@v3
+        uses: JS-DevTools/npm-publish@v1
         with:
-          node-version: latest
-          registry-url: "https://npm.pkg.github.com/"
-          scope: "@oven-sh"
-
-      - name: Install bun
-        uses: oven-sh/setup-bun@v0.1.8
-        with:
-          bun-version: canary
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Download all artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: bun-types
-          path: packages/bun-types/dist
-
-      - name: Add scope to name
-        run: bun scripts/gpr.ts
-
-      - name: Publish on GPR
-        run: cd dist/ && npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  # no need for separate releases now
-  # create-release:
-  #   name: Create Release
-  #   runs-on: ubuntu-latest
-  #   needs: [test-build]
-  #   defaults:
-  #     run:
-  #       working-directory: packages/bun-types
-  #   if: github.repository_owner == 'oven-sh'
-
-  #   steps:
-  #     - name: Download all artifacts
-  #       uses: actions/download-artifact@v3
-  #       with:
-  #         name: bun-types
-  #         path: packages/bun-types/dist
-
-  #     - name: Set version
-  #       run: echo "version=$(jq --raw-output '.version' dist/package.json)" >> $GITHUB_ENV
-
-  #     - name: Create Release
-  #       uses: softprops/action-gh-release@v0.1.14
-  #       with:
-  #         tag_name: "v${{ env.version }}"
-  #         body: "This is the release of bun-types that corresponds to the commit [${{ github.sha }}]"
-  #         token: ${{ secrets.GITHUB_TOKEN }}
-  #         files: |
-  #           dist/*
+          package: packages/bun-types/dist/package.json
+          token: ${{ secrets.NPM_BUN_TYPES_TOKEN }}
+          tag: latest
