--- a/.github/workflows/bun-linux-build.yml
+++ b/.github/workflows/bun-linux-build.yml
@@ -42,7 +42,7 @@ jobs:
             webkit_url: "https://github.com/oven-sh/WebKit/releases/download/dec30/bun-webkit-linux-amd64-lto.tar.gz"
             webkit_basename: "bun-webkit-linux-amd64-lto"
             build_machine_arch: x86_64
-          - cpu: westmere
+          - cpu: nehalem
             tag: linux-x64-baseline
             arch: x86_64
             build_arch: amd64
