Fix: ERROR: glibc-2.34-r0: overwriting etc/nsswitch.conf owned by alpine-baselayout-data-3.4.0-r0.
See: https://github.com/sgerrand/alpine-pkg-glibc/issues/185

--- a/dockerhub/Dockerfile
+++ b/dockerhub/Dockerfile
@@ -31,7 +31,7 @@ COPY --from=get /tmp/sgerrand.rsa.pub /etc/apk/keys
 COPY --from=get /tmp/glibc-${GLIBC_RELEASE}.apk /tmp
 
 # install glibc
-RUN apk --no-cache add /tmp/glibc-${GLIBC_RELEASE}.apk && \
+RUN apk --no-cache add --force-overwrite /tmp/glibc-${GLIBC_RELEASE}.apk && \
 
 # cleanup
     rm /etc/apk/keys/sgerrand.rsa.pub && \
