--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "eslint-config-prettier": "^8.5.0",
     "express": "^4.18.2",
     "mitata": "^0.1.3",
+    "mongodb": "^4.13.0",
     "peechy": "latest",
     "prettier": "^2.4.1",
     "react": "next",
