--- a/.github/workflows/bun-dependenies-build.yml
+++ b/.github/workflows/bun-dependenies-build.yml
@@ -39,7 +39,7 @@ jobs:
             webkit_url: "https://github.com/oven-sh/WebKit/releases/download/dec30/bun-webkit-linux-amd64-lto.tar.gz"
             webkit_basename: "bun-webkit-linux-amd64-lto"
             build_machine_arch: x86_64
-          - cpu: westmere
+          - cpu: nehalem
             tag: linux-x64-baseline
             arch: x86_64
             build_arch: amd64
@@ -103,6 +103,11 @@ jobs:
         with:
           node-version: "16.x"
           registry-url: "https://registry.npmjs.org"
+      - name: Publish to npm
+        if: github.ref != 'refs/heads/main'
+        run: |
+          cd ${{runner.temp}}/dependencies
+          npm publish --tag canary --access=public
       - name: Publish to npm
         if: github.ref == 'refs/heads/main'
         run: |
