--- a/.github/workflows/bun-dependenies-build.yml
+++ b/.github/workflows/bun-dependenies-build.yml
@@ -34,7 +34,7 @@ jobs:
             tag: linux-x64
             arch: x86_64
             build_arch: amd64
-            runner: linux-amd64
+            runner: big-ubuntu
             package_json_arch: x64
             webkit_url: "https://github.com/oven-sh/WebKit/releases/download/dec30/bun-webkit-linux-amd64-lto.tar.gz"
             webkit_basename: "bun-webkit-linux-amd64-lto"
@@ -44,7 +44,7 @@ jobs:
             arch: x86_64
             build_arch: amd64
             package_json_arch: x64
-            runner: linux-amd64
+            runner: big-ubuntu
             webkit_url: "https://github.com/oven-sh/WebKit/releases/download/dec30/bun-webkit-linux-amd64-lto.tar.gz"
             webkit_basename: "bun-webkit-linux-amd64-lto"
             build_machine_arch: x86_64
